--- a/src/component/navbar.scss
+++ b/src/component/navbar.scss
@@ -5,7 +5,7 @@ nav {
     align-items: center;
    color: #513921f1;
     padding: 1rem 2rem;
-  
+  background-color: antiquewhite;
     a {
       color: rgb(70, 53, 28);
       text-decoration:underline;
