--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,11 @@
+
 body {
   font-family: Arial, sans-serif;
   margin: auto;
   padding: 0;
-  background-color: antiquewhite;
+  height: 100vh;
+  background-color: rgb(255, 255, 255) !important;
+  
+
 }
 
